2003-05-29 1.2.10 Jeekay
* Bumped version to 1.2.10

2003-04-20 1.2.09 Jeekay
* Added ability to have dynamic runtime configuration
* Moved MOTD config from static code to database
* Bumped version to 1.2.09

2003-04-10 1.2.08 Jeekay
* Fixed silly logging of non-admins logging out.
* Bumped version to 1.2.08

2003-03-29 1.2.07 Jeekay
* Added logging of admin login/logouts and login failures
* Fixed inconsistancy for level 1 in ADMINCMDS
* We now deop/devoice as appropriate if a user is MODINFO'd or REMUSER'd in a
  channel that has STRICTOP or STRICTVOICE set.
* Added full support for the newer channel modes (+CcSr)
* Removed RANDOM
* Bumped version to 1.2.07

2003-02-21 1.2.06 Jeekay
* Fixed silly STRICTVOICE bug that'd deop on <=voice instead of <voice
* Bumped version to 1.2.06

2003-02-05 1.2.05 Jeekay
* BAN now devoices clients if a ban level 25-74 is set
* If a voicee is ever devoiced by us, deop the voicer
* Fixed error message given when DESCRIPTION/URL string was SET too long
* Changed error message used if ADDUSER/MODINFO/REMUSER is performed on a user
  with 499 in the channel to be more descriptive.
* Added registration date to output of INFO #channel
* Bumped version to 1.2.05

2003-01-27 1.2.04 Jeekay
* Fixed help to display right options for REHASH
* Changed max TOPIC length to 230 from 154
* Changed minimum limit of CHINFO NICK to 2 from 3
* Bumped version to 1.2.04

2003-01-15 1.2.03 Jeekay
* Added OFFICIAL LIST to display all available custom verifies
* Changed SET AUTOJOIN to log a channel join when enabled
* Changed REMUSERID to report username of failed removals
* Bumped version to 1.2.03

2003-01-09 1.2.02 Jeekay
* Fixed STATUS annoyance with MAXLOGINS and users authed clients in channels
* Removed various CTCP replies
* Added OFFICIAL command and removed old #official based verifies.
* Added ability to rehash OFFICIAL
* Bumped version to 1.2.02

2002-11-09 1.2.01 Jeekay
* Added logging to UPDATEDB